--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,266 @@
-body{
-    margin: 0%;
-    padding: 0%;
-    overflow-x: hidden;
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+    
 }
+body{
+    overflow: hidden;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+header{
+    width: 100%;
+    height: 7vh;
+    background-color: #F7A100;
+}
+
 nav{
     display: flex;
-    height: 100%;
-    justify-content: space-between;
+
+}
+
+.hoofdmenu{
+    position: fixed;
+    background-color: #F7A100;
+    top: 0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    translate:-100% 0;
+    transition: .5s;
+
+}
+.hoofdmenu.open{
+    translate:0% 0;
+}
+
+.hoofdmenu a{
+    color: white;
+    text-decoration: none;
+}
+
+header{
+    display: flex;
+    align-items: center;
+}
+
+.rechtermenu{
+    margin-left: auto;
+}
+
+.rechtermenu ul{
+    display: flex;
+    gap: 5em;
+    margin-right: 5em;
+
+
+}
+
+.rechtermenu a{
+    color: white;
+    text-decoration: none;
+
+    
+}
+
+.rechtermenu li:hover   {
     background-color: orange;
+
 }
 
-main{
-    display: grid;
-    grid-template-columns: max-content;
+
+header button{
+    order: -1;
+    z-index: 1;
+
+    
+
 }
 
-.AWEG , .RSTRAAT{
-    width: 50vh;
-    height: 35vh;
-    border: solid black 2px;
-    border-color: limegreen;
+button .menu{
+    background-color: transparent;
+
+
 }
+
+.avatars{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;    
+   
+}
+
+/* alle images inclusief plus button  */
+.avatars img{
+    border-radius: solid 5px;
+}
+
+.avatars ul {
+    display:flex;
+    gap:1em;
+    overflow-x: auto;
+    padding:.75em;
+}
+
+.avatars .memberavatars {
+    transition: .3s;
+    flex-shrink: 0;
+}
+
+.avatars .memberavatars:hover{
+    transform: scale(1.1);
+    z-index: inherit;
+}
+
+.avatars .memberavatars:active{    
+    background-color: #F7A100;
+    border: solid 3px orange;
+    border-radius: 50%;
+
+}
+
+
+.add-button{
+    background-color: transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.add-button:active{    
+    background-color: #F7A100;
+    border-radius: 50%;
+}
+
+.logo{
+    display: flex;
+    flex-shrink: 0;
+
+}
+
+.logo {
+        max-width: 120px;
+        height: auto;
+    }
+
+dialog {
+    left:50%;
+    top:50%;
+
+    translate:-50% -50%;
+}
+
+dialog::backdrop {
+    background-color: #fff (255 0 0 / .7);
+    backdrop-filter: blur(.1em);
+}
+
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    text-align: center;
+    margin-bottom: 1em; /* Add spacing between each star rating section */
+  }
+  
+  .rating > span {
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+  }
+  
+  .rating > span:before {
+    content: "\2605"; /* Unicode character for a solid star */
+    position: absolute;
+    color: orange; /* Color of the filled star */
+  }
+  
+  .rating > span:hover:before {
+    content: "\2605";
+    position: absolute;
+    color: orange;
+  }
+  
+  .rating > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
+    color: gray; /* Color of the empty star on hover */
+  }
+
+a:hover article{
+    background-color: aliceblue;
+}
+
+.houses{
+    display: flex;
+    justify-content: center;
+    gap: 10em;
+    height: 10em;
+    margin-top: 3em;
+
+    /* overflow:scroll;*/
+
+}
+
+.houses li{
+    display: flex;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
+}   
+
+.houses a{
+    display: flex;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
+} 
+
+.houses li{
+    display: flex;
+    justify-content: center;
+} 
+.houses img{
+    height: 30vh;
+    width: 30vw;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid 2px #F7A100;
+
+}
+
+.wie img{
+    position: absolute;
+    height: 5vh;
+    width: 5vw;
+  }
+
+.wie2 img{
+    height: 5vh;
+    width: 5vw;
+  }
+
+
+.houses img:hover{
+    transform: scale(1.02);
+    transition: .3s;
+    z-index: inherit;
+}
+
+.filter {
+    margin-top: 1em;
+    margin-left: 1.5em;
+  }
+  
+  h2{
+    margin-left: 1em;
+  }
+
