--- a/styles/styles.css
+++ b/styles/styles.css
@@ -325,6 +325,20 @@ a:hover article{
     content: '\2605'; 
   }
   
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 10em;
+  }
+  
+  .pagination a {
+
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
   
 
   .boven-footer{
